# easy-paint

./: CMakeLists.txt  README.md  TODO.txt
src/: 3dmath.c  3dmath.h  app.c  app.h  brush.c  brush.h  brush_eraser.c  brush_pen.c  brush_pencil.c  canvas.c  canvas.h  debug.h  filesystem.c  filesystem.h  input_manager.c  input_manager.h  load_shaders.c  load_shaders.h  main.c  matrix.c  matrix.h  record.c  record.h  renderer2d.c  renderer2d.h  resmgr.c  resmgr.h  resource_manager.c  resource_manager.h  sf.c  sf.h  sf_rect.c  sf_rect.h  system.c  system.h  texture.c  texture.h  ui.c  ui.h  ui_color_picker.c  (+19 more)
src/Android/: .project  AndroidManifest.xml
src/Android/jni/: Android.mk  input_manager.c  main.c  window.c
src/Android/res/values/: strings.xml
src/android/: AndroidManifest.xml
src/android/assets/record/: 1.rec  2.rec
src/android/jni/: Android.mk  input_manager.c  me_sachs_easypaint_EasyPaintLib.c  me_sachs_easypaint_EasyPaintLib.h  window.c
src/android/res/values/: strings.xml
src/android/src/me/sachs/easypaint/: EasyPaintActivity.java  EasyPaintLib.java  EasyPaintView.java
src/utils/: rec2txt.c
src/windows/: input_manager.c  main.c  window.c
